--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
             <version>3.1.2.RELEASE</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
 
     </dependencies>
 
